--- a/src/components/creatures/Creatures.module.css
+++ b/src/components/creatures/Creatures.module.css
@@ -10,3 +10,10 @@
     height: 650px;
     padding: 20px;
 }
+
+.godName {
+    position: absolute;
+    top: 20px;
+    left: 100px;
+    color: white;
+}
