--- a/src/components/playing_board/counter/Counter.module.css
+++ b/src/components/playing_board/counter/Counter.module.css
@@ -3,6 +3,7 @@
     height: 100%;
     width: 100%;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
