--- a/src/App.css
+++ b/src/App.css
@@ -4,21 +4,6 @@
   width: 100%;
   height: 100vh;
   display: flex;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-
-  to {
-    transform: rotate(360deg);
-  }
+  justify-content: space-around;
+  padding: 10px;
 }
