--- a/src/components/creatures/Creatures.module.css
+++ b/src/components/creatures/Creatures.module.css
@@ -1,19 +1,13 @@
 .container {
-    align-self: center;
     display: flex;
+    align-self: center;
     justify-content: space-between;
+    align-items: center;
     flex-direction: column;
     flex-wrap: wrap;
     gap: 10px;
     align-items: center;
-    width: 33.3%;
+    min-width: 460px;
     height: 650px;
     padding: 20px;
-}
-
-.godName {
-    position: absolute;
-    top: 20px;
-    left: 100px;
-    color: white;
 }
