--- a/src/components/difficulties/Difficult.module.css
+++ b/src/components/difficulties/Difficult.module.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 33.3%;
+    min-width: 200px;
     height: 100%;
     flex-direction: column;
     gap: 10px;
@@ -20,5 +20,9 @@
 }
 
 .diff {
-    color: white;
+    color: blueviolet;
+}
+
+.godName {
+    color: blueviolet;
 }
