--- a/src/components/difficulties/Difficult.module.css
+++ b/src/components/difficulties/Difficult.module.css
@@ -5,7 +5,6 @@
     min-width: 200px;
     height: 100%;
     flex-direction: column;
-    gap: 10px;
 }
 
 .container button {
@@ -13,6 +12,14 @@
     height: 30px;
     font-weight: 700;
     opacity: 0.7;
+    color: blueviolet;
+}
+
+.buttons {
+    margin: 50px 0px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
 }
 
 .container button:hover {
@@ -20,9 +27,14 @@
 }
 
 .diff {
-    color: blueviolet;
+    color: white;
+    margin-top: 10px;
 }
 
 .godName {
+    color: white;
+}
+
+.reset {
     color: blueviolet;
 }
